src/assets/css/style.css
/*@ RESET */
* {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

ul {
    padding-left: 0;
}

li {
    list-style-type: none;
}

body {
    margin: 0;
}


/*@ GENERAL */
:root {
    --layout-margin: 4em;
}

@media (prefers-color-scheme: light) {
  :root {
    --primary-text-color: rgb(55, 55, 55);
    --heading-text-color: rgb(26 26 26);
    --frame-color: rgb(10 10 10);
    --cto-text: #ffffff;
    --red: #bc3315;
    --red-dark: #942911;
    --background: #ffffff;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --primary-text-color: rgb(200, 200, 200);
    --heading-text-color: rgb(226, 226, 226);
    --frame-color: rgb(10 10 10);
    --cto-text: #000;
    --red: #bc3315;
    --red-dark: #942911;
    --background: #000;
  }
}

html {
    background: var(--frame-color);
    font-family: sans-serif;
    color: var(--primary-text-color);
}

body {
    margin: min(21px, 1vw);
    background: var(--background);
}

main {
    padding-bottom: 5em;
    max-width: 60vw;
    margin: 0 auto;
    line-height: 1.5;
}

h1 {
    font-size: 2.5rem;
    padding: 0.6em 0em;
    color: var(--heading-text-color);
}

h2 {
    padding-top: 1em;
}

a {
    color: inherit;
    text-decoration: underline;
}

a:hover {
    color: inherit;
    text-decoration: none;
    opacity: 0.6;
}

img {
    max-width: 80vw;
    max-height: 70vh;
}

.fully-hidden {
    display: none;
}

.main-wrapper {
    padding-left: 5vw;
    padding-right: 5vw;
    text-align: center;
}

/*@ HEADER */
header {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding-top: min(5vw, 2em);
    padding-bottom: 1.5em;
    border-bottom: 1px solid;
}

header a {
    display: block;
}

header .logo a:hover {
    opacity: 1;
}

@media (prefers-color-scheme: dark) {
    header img {
        filter: invert(0.9);
    }
}

/*@ SITE MENU */
djm-menu {
    margin-top: 0.5em;
}

djm-menu details[open] summary {
    width: fit-content;
    border-bottom: 1px solid black;
    margin: 0 auto;
    padding-left: 0.5em;
    padding-right: 0.5em;
    margin-bottom: 0.5em;
}

.hide-summary summary {
    display: none;
}

.site-menu nav {
    padding-top: 1em;
    padding-bottom: 1em;
}

.site-menu ul {
    display: flex;
    justify-content: center;
    font-size: min(1.1em, 1.8vw);
}

.site-menu a {
    padding-left: 1em;
    padding-right: 1em;
    text-decoration: none;
    color: inherit;
}

.site-menu a:hover {
    text-decoration: underline;
}


/*@ FOOTER */
footer {
    border-top: 1px solid;
    padding-bottom: 1em;
}

footer li {
    line-height: 2;
}

footer a {
    color: inherit;
}

footer a:hover {
    opacity: 0.6;
}

footer nav:not(:last-child) {
    padding-top: 2em;
}

.copyright {
    padding-top: 1em;
}


/*@ HOME PAGE */
.speech {
    line-height: 2;
    max-width: 800px;
    margin: 0 auto;
}

.speech img {
    max-width: 300px;
}


/*@ CONTACT PAGE */
.contact-page {
    text-align: start;
}

.contact-page ul {
    padding-left: 1em;
}

.contact-page li {
    list-style-type: disc;
}


/*@ REVIEWS */
.review {
    text-align: start;
    margin: 0 auto;
    width: 80vw;
}

.one-of-many {
    border: 1px solid #8c8989;
    border-radius: 16px;
    margin: 50px 0;
    padding: 10px 20px;
}


/*@ VIDEO */
djm-video {
    position: relative;
    display: block;
}

djm-video button {
    border: 0;
    display: block;
    position: absolute;
    z-index: 9;
    top: 50%;
    left: 50%;
    --size: clamp(70px, 8vw, 130px);
    margin-top: calc(-1 * (var(--size)/2));
    margin-left: calc(-1 * (var(--size)/2));
    width: var(--size);
    height: var(--size);
    border-radius: 100%;
    opacity: 0.5;
    transition: 
        opacity 0.3s ease,
        transform 0.3s ease;
    background-color: #FF0000;
    opacity: 0.7;
}

djm-video button::after {
    display: block;
    content: "";
    position: absolute;
    z-index: 10;
    top: 50%;
    left: 50%;
    width: 0;
    height: 0;
    --arrow-height: calc(var(--size) / 4);
    --arrow-width: calc(var(--size) / 4 + 1vw);
    margin-top: calc(-1 * (var(--arrow-height)));
    margin-left: calc((var(--arrow-width) / 1.6) - var(--arrow-width));
    border-top: var(--arrow-height) solid transparent;
    border-bottom: var(--arrow-height) solid transparent;
    border-left: var(--arrow-width) solid transparent;
    border-left-color: #FFFFFF;
}

djm-video:hover button, djm-video:focus button {
  opacity: 0.9;
  transform: scale(1.1);
}

djm-video:hover button {
  opacity: 0.9;
}

djm-video {
    width: 100%;
}

djm-video video a {
    text-transform: uppercase;
    text-decoration: none;
}

djm-video video a:hover {
    text-decoration: underline;
}


/*@ CTO */
.cto a {
    display: inline-block;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    padding: 6px 24px;
    background-color: var(--red);
    border: 1px solid var(--red-dark);
    border-radius: 6px;
    color: var(--cto-text);
    line-height: 1.75;
    text-decoration: none;
    cursor: pointer;
    transition: transform .5s ease;
}

.cto a:hover {
    transform: scale(1.1);
    transition: transform .5s ease;
}


/*@ SERVICES GALLERY */
.services-gallery nav {
    margin: auto;
    max-width: 800px;
}

.services-gallery ul {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2em;
}

.services-gallery a {
    color: inherit;
    text-decoration: none;
    box-shadow: none
}

.services-gallery a:hover,
.services-gallery a:active {
    text-decoration: underline;
}

.services-gallery li {
    --border-radius: 8px;
    border-radius: var(--border-radius);
    text-align: center;
}

@media (prefers-color-scheme: light) {
    .services-gallery li {
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
}

@media (prefers-color-scheme: dark) {
    .services-gallery li {
        box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
    }
}

.services-gallery img {
    border-radius: var(--border-radius) var(--border-radius) 0 0;
    width: 100%;
}

.services-gallery h3 {
    font-weight: 600;
    font-style: normal;
    font-family: serif;
    font-size: 1em;
}


/*@ RELATED ARTICLES */
.related-articles {
    text-align: left;
}
.related-articles li {
    list-style-type: disc;
}

@media only screen and (max-width: 500px){
    body {
        margin: 0;
    }
}

@media only screen and (max-width: 800px){
    .site-menu ul {
        display: initial;
        font-size: 1em;
    }

    .site-menu li {
        padding-top: 0.5em;
    }
}

@media only screen and (max-width: 1000px){
    main {
        max-width: 80vw;
    }
}

